--- a/.env
+++ b/.env
@@ -1,6 +1,4 @@
-SESSION_ID= YOR SESSION ID
-OWNER_NAME= YOUR NAME
-OWNER_NUMBER= YOUR NUMBER
+SESSION_ID=Red_Fox-MD:/gvd8yDsd
 AUTO_STATUS_SEEN=true
 REJECT_CALL=false
 MODE=public
